--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,10 @@ button:focus {
 .vel-btn-solid {
   background: #451257;
   border-radius: 5px;
-  padding: 11px 27px;
+  padding: 10px 26px;
   font-style: normal;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 22px;
   color: #ffffff;
   border: none;
@@ -43,10 +43,10 @@ button:focus {
 
 .vel-btn-light {
   border-radius: 5px;
-  padding: 11px 27px;
+  padding: 10px 26px;
   font-style: normal;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 22px;
   color: #ffffff;
   border: none;
@@ -58,7 +58,7 @@ button:focus {
 .topHead .subHead {
   font-style: normal;
   font-weight: 600;
-  font-size: 24px;
+  font-size: 22px;
   line-height: 30px;
   color: #9d76ab;
 }
@@ -66,7 +66,7 @@ button:focus {
 .topHead .mainHead {
   font-style: normal;
   font-weight: 700;
-  font-size: 50px;
+  font-size: 44px;
   line-height: 62px;
   color: #451257;
 }
@@ -82,19 +82,19 @@ button:focus {
   right: 0;
   width: 100%;
   z-index: 999;
-  padding: 30px !important;
+  padding: 12px 30px !important;
   background: transparent;
   transition: 0.3s linear;
 }
 
 .navbar.scroll {
-  padding: 10px 30px !important;
+  padding: 6px 30px !important;
   background: #ffffff;
   transition: 0.3s linear;
 }
 
 .navbar .navbar-brand {
-  height: 41.98px;
+  height: 38px;
 }
 
 .navbar .navbar-toggler img {
@@ -104,10 +104,10 @@ button:focus {
 .navbar .nav-link {
   font-style: normal;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 22px;
   color: #2f2f2f;
-  margin: 0 16px;
+  margin: 0 12px;
 }
 
 /* heroSec */
@@ -122,7 +122,7 @@ button:focus {
 .heroSec h1 {
   font-style: normal;
   font-weight: 700;
-  font-size: 90px;
+  font-size: 80px;
   line-height: 110%;
   text-align: center;
   color: #451257;
@@ -131,13 +131,10 @@ button:focus {
 .heroSec p {
   font-style: normal;
   font-weight: 400;
-  font-size: 24px;
+  font-size: 23px;
   line-height: 28px;
-  /* or 117% */
-
   text-align: center;
   letter-spacing: -0.008em;
-
   color: #435057;
 }
 
@@ -152,7 +149,7 @@ button:focus {
   position: relative;
   border: none;
   padding: 0 8px;
-  min-height: 34vh;
+  min-height: 40vh;
 }
 
 .serviceSec .card .iconWrapper.one {
@@ -168,8 +165,8 @@ button:focus {
 }
 
 .serviceSec .card .iconWrapper {
-  width: 120px;
-  height: 120px;
+  width: 105px;
+  height: 105px;
   margin: 0 auto;
   margin-top: -50px !important;
   left: 29%;
@@ -180,13 +177,13 @@ button:focus {
 }
 
 .serviceSec .card .iconWrapper img {
-  height: 56.81px;
+  height: 53px;
 }
 
 .serviceSec .card h2 {
   font-style: normal;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 26px;
   line-height: 38px;
   text-align: center;
   color: #000000;
@@ -196,7 +193,7 @@ button:focus {
 .serviceSec .card p {
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 22px;
   text-align: center;
   letter-spacing: -0.008em;
@@ -211,7 +208,7 @@ button:focus {
   background: #ffffff;
   box-shadow: 4px 4px 20px 5px rgba(0, 0, 0, 0.09);
   border-radius: 20px;
-  padding: 20px;
+  padding: 18px;
   position: relative;
 }
 
@@ -239,8 +236,8 @@ button:focus {
   background: #ffffff;
   box-shadow: 0px 4px 15px 1px rgba(0, 0, 0, 0.14);
   border-radius: 10px;
-  width: 70px;
-  height: 70px;
+  width: 55px;
+  height: 55px;
   font-size: 28px;
   color: #451257;
   border: none;
@@ -249,16 +246,16 @@ button:focus {
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 48%;
+  top: 45%;
   z-index: 1;
 }
 
 .resultSec .mySwiper .result-swiper-button-prev {
-  left: 90px;
+  left: 75px;
 }
 
 .resultSec .mySwiper .result-swiper-button-next {
-  right: 90px;
+  right: 75px;
 }
 
 .resultSec .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet-active {
@@ -275,14 +272,14 @@ button:focus {
 }
 
 .resultSec .tokenWrap {
-  padding: 42px 30px;
+  padding: 32px 22px;
   box-shadow: 4px 4px 19px 5px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
 
 .resultSec .tokenWrap .img-tok {
-  width: 84px;
-  height: 84px;
+  width: 82px;
+  height: 82px;
   border-radius: 50%;
   background: #faf9f9;
   display: flex;
@@ -302,7 +299,7 @@ button:focus {
 .resultSec .tokenWrap .dets h3 {
   font-style: normal;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 36px;
   letter-spacing: -0.012em;
   color: #04151f;
@@ -311,7 +308,7 @@ button:focus {
 .resultSec .tokenWrap .dets p {
   font-style: normal;
   font-weight: 600;
-  font-size: 21px;
+  font-size: 20px;
   line-height: 26px;
 
   letter-spacing: -0.012em;
@@ -325,14 +322,14 @@ button:focus {
   border-radius: 10px;
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 22px;
   line-height: 32px;
   letter-spacing: -0.012em;
   color: #43936c;
 }
 
 .resultSec .total .inner {
-  padding: 20px;
+  padding: 18px;
   box-shadow: 4px 4px 19px 5px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
@@ -340,7 +337,7 @@ button:focus {
 .resultSec .total h3 {
   font-style: normal;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 22px;
   line-height: 38px;
   letter-spacing: -0.012em;
   color: #435057;
@@ -349,7 +346,7 @@ button:focus {
 .resultSec .total h2 {
   font-style: normal;
   font-weight: 700;
-  font-size: 40px;
+  font-size: 34px;
   line-height: 47px;
   letter-spacing: -0.012em;
   color: #000000;
@@ -358,14 +355,14 @@ button:focus {
 .resultSec .modal-report {
   font-style: normal;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 47px;
   letter-spacing: -0.012em;
   color: #451257;
 }
 
 .resultSec .modal-report i {
-  font-size: 28px;
+  font-size: 26px;
 }
 
 .resultSec .modal.show .modal-dialog {
@@ -383,8 +380,8 @@ button:focus {
 }
 
 .resultSec .modal .tokenWrap.big .img-tok {
-  width: 157px;
-  height: 157px;
+  width: 135px;
+  height: 135px;
 }
 
 .resultSec .modal .tabsModal,
@@ -395,8 +392,8 @@ button:focus {
 }
 
 .resultSec .modal .tokenWrap.big .img-tok img {
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
 }
 
 .resultSec .modal .wholeTok .tokenWrap .img-tok {
@@ -503,21 +500,21 @@ button:focus {
 }
 
 .meet-ceo .row .quote img {
-  height: 50px;
+  height: 40px;
   margin-top: -30px;
 }
 
 .meet-ceo .row .caption h2 {
   font-style: normal;
   font-weight: 500;
-  font-size: 35px;
+  font-size: 30px;
   line-height: 44px;
   color: #000000;
 }
 
 .meet-ceo .row .caption h3 {
   font-weight: 700;
-  font-size: 30px;
+  font-size: 24px;
   line-height: 38px;
   color: #451257;
 }
@@ -525,15 +522,15 @@ button:focus {
 .meet-ceo .row .caption p {
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 31px;
 
   color: #777777;
 }
 
 .meet-ceo .row .caption .icons .icon-Connect {
-  height: 55px;
-  width: 55px;
+  height: 50px;
+  width: 50px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -542,7 +539,7 @@ button:focus {
 }
 
 .meet-ceo .row .caption .icons .icon-Connect img {
-  height: 24px;
+  height: 20px;
 }
 
 /* meet-ceo */
@@ -569,6 +566,8 @@ button:focus {
   background-color: transparent !important;
   box-shadow: none !important;
   position: relative;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .faqs-sec .accordion-button::after {
@@ -578,7 +577,7 @@ button:focus {
 .faqs-sec .accordion .sNo {
   font-style: normal;
   font-weight: 700;
-  font-size: 48px;
+  font-size: 46px;
   line-height: 120%;
   letter-spacing: 0.25px;
   color: rgba(60, 60, 67, 0.5);
@@ -587,7 +586,7 @@ button:focus {
 .faqs-sec .accordion h3 {
   font-style: normal;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 28px;
   line-height: 120%;
   display: flex;
   align-items: center;
@@ -642,7 +641,8 @@ button:focus {
 .faqs-sec .accordion .accordion-body {
   font-style: normal;
   font-weight: 500;
-  font-size: 22px;
+  font-size: 20px;
+  padding-top: 0;
   line-height: 140%;
   color: rgba(60, 60, 67, 0.85);
   width: 80%;
@@ -690,7 +690,7 @@ button:focus {
 .contact-sec .row .form-label {
   font-style: normal;
   font-weight: 600;
-  font-size: 27px;
+  font-size: 24px;
   line-height: 34px;
   color: #ffffff;
 }
@@ -699,19 +699,18 @@ button:focus {
   background: #f6f6f6;
   border: 2px solid #451257;
   border-radius: 10px;
-  padding: 30px 20px 29px 20px;
+  padding: 14px 16px 12px 16px;
   width: 100%;
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
-  line-height: 31px;
+  font-size: 22px;
   color: #878787;
 }
 
 .contact-sec .row .form-control::placeholder {
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
+  font-size: 22px;
   line-height: 31px;
   color: #878787;
 }
@@ -719,14 +718,13 @@ button:focus {
 .contact-sec .row .btn-submit {
   font-style: normal;
   font-weight: 600;
-  font-size: 29px;
-  line-height: 40px;
+  font-size: 24px;
   text-align: center;
   letter-spacing: -0.016em;
   color: #451257;
   background: #ffffff;
   border-radius: 15px;
-  padding: 18px 66px;
+  padding: 12px 64px 10px 64px;
 }
 
 .modal-header {
@@ -784,7 +782,7 @@ footer {
 }
 
 footer .footerLogo {
-  height: 41.98px;
+  height: 40px;
 }
 
 footer .note {
@@ -814,20 +812,20 @@ footer .copyright {
 .backToTop {
   background: #451257;
   border-radius: 4px;
-  width: 82.91px;
-  height: 48px;
+  width: 65px;
+  height: 44px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: fixed;
   bottom: 28px;
-  right: 5%;
+  right: 4%;
   z-index: 999;
 }
 
 .backToTop i {
   color: #ffffff;
-  font-size: 26px;
+  font-size: 22px;
 }
 
 /* BAck to top */
@@ -835,13 +833,18 @@ footer .copyright {
 /* media quries start from here */
 
 @media screen and (min-width: 1440px) {
+  .serviceSec .card {
+    min-height: 30vh;
+    margin-top: 6rem;
+  }
+
   .backToTop {
-    width: 95px;
-    height: 55px;
+    width: 65px;
+    height: 50px;
   }
 
   .backToTop i {
-    font-size: 28px;
+    font-size: 26px;
   }
 }
 
@@ -867,7 +870,7 @@ footer .copyright {
   }
 
   .serviceSec .card {
-    min-height: 32vh;
+    min-height: 35vh;
     margin-top: 6rem;
   }
 
