--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ button:focus {
 /* common */
 .vel-btn-solid {
   background: #451257;
-  border-radius: 5px;
+  border-radius: 60px;
   padding: 10px 26px;
   font-style: normal;
   font-weight: 600;
@@ -43,7 +43,6 @@ button:focus {
 
 .vel-btn-light {
   border-radius: 5px;
-  padding: 10px 26px;
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
@@ -51,18 +50,32 @@ button:focus {
   color: #ffffff;
   border: none;
   outline: none;
-  background: #9d76ab;
+  background: #451257;
   margin: 15px;
 }
-
+.btns a {
+  width: 284px;
+  border-radius: 50px;
+  padding: 16px 88px;
+  font-weight: 600 !important;
+}
+.btns a:nth-child(1) {
+  background: transparent;
+  border: 2px solid #451257;
+  color: #451257;
+  font-size: 16px;
+}
 .topHead .subHead {
   font-style: normal;
-  font-weight: 600;
-  font-size: 22px;
+  font-weight: 400;
+  font-size: 18px;
   line-height: 30px;
-  color: #9d76ab;
+  text-align: center;
+  color: #52525b;
 }
-
+.topHead {
+  text-align: center;
+}
 .topHead .mainHead {
   font-style: normal;
   font-weight: 700;
@@ -70,17 +83,31 @@ button:focus {
   line-height: 62px;
   color: #451257;
 }
+.topHead .mainHeadp {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+  color: #52525b;
+}
 
 /* common */
 
 /* navbar */
 
-.navbar {
+.header .navbar {
   position: fixed !important;
   top: 0;
   left: 0;
   right: 0;
   width: 100%;
+  z-index: 999;
+  padding: 12px 30px !important;
+  background: transparent;
+  transition: 0.3s linear;
+}
+.navbar {
   z-index: 999;
   padding: 12px 30px !important;
   background: transparent;
@@ -113,19 +140,19 @@ button:focus {
 .navbar .navbar-toggler:focus {
   outline: none;
   box-shadow: none !important;
-} 
+}
 .navbar .navbar-toggler[aria-expanded="true"] img:nth-of-type(1) {
   display: none;
-} 
+}
 .navbar .navbar-toggler[aria-expanded="true"] img:nth-of-type(2) {
   display: block;
-} 
+}
 .navbar .navbar-toggler[aria-expanded="false"] img:nth-of-type(1) {
   display: block;
-} 
+}
 .navbar .navbar-toggler[aria-expanded="false"] img:nth-of-type(2) {
   display: none;
-} 
+}
 /* heroSec */
 .heroSec {
   background: url(../assets/Background.png);
@@ -159,32 +186,19 @@ button:focus {
 /* Services */
 .serviceSec .card {
   background: #ffffff;
-  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
-  border-radius: 15px;
   text-align: center;
   position: relative;
   border: none;
-  padding: 0 8px;
-  min-height: 40vh;
-}
-
-.serviceSec .card .iconWrapper.one {
-  background: #451257;
-}
-
-.serviceSec .card .iconWrapper.two {
-  background: #242f65;
-}
-
-.serviceSec .card .iconWrapper.three {
-  background: #7390f9;
+  padding: 40px;
+  background: #ffffff;
+  border: 1px solid #e2e8f0;
+  border-radius: 20px;
+  margin-top: 24px;
 }
 
 .serviceSec .card .iconWrapper {
   width: 100px;
   height: 100px;
-  margin: 0 auto;
-  margin-top: -50px !important;
   left: 29%;
   display: flex;
   align-items: center;
@@ -193,17 +207,17 @@ button:focus {
 }
 
 .serviceSec .card .iconWrapper img {
-  height: 50px;
+  height: 60px;
 }
 
 .serviceSec .card h2 {
   font-style: normal;
   font-weight: 600;
-  font-size: 24px;
+  font-size: 28px;
   line-height: 32px;
-  text-align: center;
+  text-align: start;
   color: #000000;
-  margin: 28px auto 18px auto;
+  padding-top: 30px;
 }
 
 .serviceSec .card p {
@@ -211,7 +225,7 @@ button:focus {
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
-  text-align: center;
+  text-align: start;
   letter-spacing: -0.008em;
   color: #435057;
 }
@@ -219,7 +233,9 @@ button:focus {
 /* Services */
 
 /* resultSec */
-
+.resultSec {
+  background: #f6f6f6;
+}
 .resultSec .swiper-slide .slideInner {
   background: #ffffff;
   box-shadow: 4px 4px 20px 5px rgba(0, 0, 0, 0.09);
@@ -228,6 +244,7 @@ button:focus {
   position: relative;
 }
 
+.resultSec .swiper-slide.swiper-slide-next .slideInner::after,
 .resultSec .swiper-slide.swiper-slide-active .slideInner::after {
   content: none;
 }
@@ -242,36 +259,25 @@ button:focus {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background: #afacac;
-  opacity: 0.45;
+  background: #ffffff;
+  opacity: 0.5;
   border-radius: inherit;
 }
 
 .resultSec .mySwiper .result-swiper-button-prev,
 .resultSec .mySwiper .result-swiper-button-next {
-  background: #ffffff;
-  box-shadow: 0px 4px 15px 1px rgba(0, 0, 0, 0.14);
+  background: transparent;
   border-radius: 10px;
   width: 55px;
   height: 55px;
   font-size: 28px;
-  color: #451257;
+  color: #000;
   border: none;
   outline: none;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  top: 45%;
   z-index: 1;
-}
-
-.resultSec .mySwiper .result-swiper-button-prev {
-  left: 75px;
-}
-
-.resultSec .mySwiper .result-swiper-button-next {
-  right: 75px;
 }
 
 .resultSec
@@ -293,9 +299,12 @@ button:focus {
 
 .resultSec .tokenWrap {
   padding: 22px;
-  box-shadow: 4px 4px 19px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  border-bottom: 1px solid #cad1da;
 }
+.resultSec .tokenWrap.big,
+.resultSec .tokenWrap:nth-of-type(3){
+  border: none;
+} 
 
 .resultSec .tokenWrap .img-tok {
   width: 82px;
@@ -313,7 +322,7 @@ button:focus {
 }
 
 .resultSec .tokenWrap .dets {
-  margin: 6px 20px 0 20px;
+  margin: 6px 20px 0 5px;
 }
 
 .resultSec .tokenWrap .dets h3 {
@@ -327,49 +336,47 @@ button:focus {
 
 .resultSec .tokenWrap .dets p {
   font-style: normal;
-  font-weight: 600;
-  font-size: 20px;
+  font-weight: 400;
+  font-size: 16px;
   line-height: 26px;
-
-  letter-spacing: -0.012em;
-
-  color: #636e74;
+  color: #52525b;
 }
 
 .resultSec .tokenWrap .badgeToken {
-  padding: 8px 32px;
-  background: #a7ddc3;
-  border-radius: 10px;
+  padding: 5px 18px;
   font-style: normal;
-  font-weight: 700;
-  font-size: 22px;
-  line-height: 32px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 28px;
   letter-spacing: -0.012em;
-  color: #43936c;
+  color: #000000;
+  border: 2px solid #25eb8c;
+  border-radius: 50px;
 }
 
 .resultSec .total .inner {
   padding: 18px;
-  box-shadow: 4px 4px 19px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  border-bottom: 1px solid #e2e8f0;
 }
-
-.resultSec .total h3 {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 38px;
-  letter-spacing: -0.012em;
-  color: #435057;
-}
-
-.resultSec .total h2 {
+.resultSec .total .inner h2 {
   font-style: normal;
   font-weight: 700;
-  font-size: 34px;
-  line-height: 47px;
+  font-size: 42px !important;
+  line-height: 47px !important;
   letter-spacing: -0.012em;
-  color: #000000;
+  color: #451257;
+}
+.resultSec .total .inner h3 {
+  font-style: normal;
+  font-weight: 600 !important;
+  font-size: 28px !important;
+  line-height: 42px !important;
+  letter-spacing: -0.012em;
+
+  color: #52525b;
+}
+.resultSec .total .inner1 {
+  border-right: 1px solid #e2e8f0;
 }
 
 .resultSec .modal-report {
@@ -382,7 +389,8 @@ button:focus {
 }
 
 .resultSec .modal-report i {
-  font-size: 26px;
+  font-size: 29px;
+  rotate: -45deg;
 }
 
 @media screen and (min-width: 1300px) {
@@ -418,10 +426,25 @@ button:focus {
 .resultSec .modal .tabsModal,
 .resultSec .modal .wholeTok .innerWrapper {
   background: #ffffff;
-  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.06);
   border-radius: 10px;
 }
-
+.Revenuebtn {
+  padding: 7px 38px;
+  width: 200px;
+  height: 46px;
+  background: #a7ddc3;
+  border-radius: 10px !important;
+  border: none !important;
+  font-weight: 700 !important;
+  font-size: 24px !important;
+  line-height: 32px;
+  letter-spacing: -0.012em;
+  color: #43936c !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .resultSec .modal .tokenWrap.big .img-tok img {
   width: 75px;
   height: 75px;
@@ -445,10 +468,24 @@ button:focus {
   font-size: 20px;
   line-height: 28px;
 }
+.resultSec .modal .tokenWrap .dets .paraDets {
+  font-style: normal;
+  font-weight: 600 !important;
+  font-size: 20px !important;
+  line-height: 26px !important;
+  letter-spacing: -0.012em;
+  color: #636e74 !important;
+}
 
 .resultSec .modal .tokenWrap .dets p {
-  font-size: 18px;
-  line-height: 24px;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 38px;
+  /* identical to box height */
+
+  letter-spacing: -0.012em;
+
+  color: #451257;
 }
 
 .resultSec .modal .total h3 {
@@ -572,8 +609,15 @@ button:focus {
   font-size: 24px;
   line-height: 38px;
   color: #451257;
+  margin-bottom: 0;
 }
-
+.meet-ceo .row .caption p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #52525b;
+}
 .meet-ceo .row .caption p {
   font-style: normal;
   font-weight: 500;
@@ -590,7 +634,7 @@ button:focus {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #000000;
+  background: #451257;
 }
 
 .meet-ceo .row .caption .icons .icon-Connect img {
@@ -600,15 +644,20 @@ button:focus {
 /* meet-ceo */
 
 /* FAQs */
-.faqs-sec .accordion-wrapper {
-  background: rgba(246, 246, 246, 0.5);
+.faqs-sec {
+  background: #f6f6f6;
+}
+.faqs-sec .accordion {
+  background: #ffffff;
+  padding: 0;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .faqs-sec .accordion-item {
   background-color: transparent;
   border-radius: 0 !important;
   border: none !important;
-  border-bottom: 3px solid#B8B2B2 !important;
+  border-bottom: 1px solid #e4e4e7 !important;
 }
 
 .faqs-sec .accordion-item:nth-child(5) {
@@ -621,10 +670,11 @@ button:focus {
   background-color: transparent !important;
   box-shadow: none !important;
   position: relative;
-  padding-top: 0;
   padding-bottom: 0;
 }
-
+.faqs-sec .accordion-header {
+  padding: 16px 0;
+}
 .faqs-sec .accordion-button::after {
   content: none !important;
 }
@@ -638,14 +688,16 @@ button:focus {
   color: rgba(60, 60, 67, 0.5);
 }
 
-.faqs-sec .accordion h3 {
+.faqs-sec .accordion .accordion-button.collapsed {
+  color: #090914;
+}
+.faqs-sec .accordion .accordion-button {
   font-style: normal;
   font-weight: 600;
-  font-size: 24px;
-  line-height: 120%;
-  display: flex;
-  align-items: center;
-  color: #000000;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: -0.5px;
+  color: #451257;
 }
 
 .faqs-sec .accordion .collapsed .accordIcon {
@@ -695,11 +747,10 @@ button:focus {
 
 .faqs-sec .accordion .accordion-body {
   font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  padding-top: 0;
-  line-height: 140%;
-  color: rgba(60, 60, 67, 0.85);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #52525b;
   width: 80%;
 }
 
@@ -707,54 +758,27 @@ button:focus {
 
 /* contact */
 .contact-sec {
-  background: #451257;
+  background: url(../assets/BG.png) center;
+  background-size: cover;
   border-radius: 20px;
   position: relative;
   z-index: 1;
 }
-
-.contact-sec::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -2;
-  width: 100%;
-  height: 100%;
-  background: #9d76ab;
-  border-radius: 20px;
-  transform: rotate(2.85deg);
-}
-
-.contact-sec::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background: #451257;
-  border-radius: 20px;
-}
-
-.contact-sec .row .form-label {
+.contact-sec .topHead p {
   font-style: normal;
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 34px;
-  color: #ffffff;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+
+  color: #cbd5e1;
 }
 
 .contact-sec .row .form-control {
-  background: #f6f6f6;
-  border: 2px solid #451257;
-  border-radius: 10px;
-  padding: 12px 14px 10px 14px;
+  background: transparent;
+  border: 1px solid #ffffff;
+  border-radius: 9px;
+  padding: 16px 20px 14px 20px;
   width: 100%;
   font-style: normal;
   font-weight: 500;
@@ -764,10 +788,13 @@ button:focus {
 
 .contact-sec .row .form-control::placeholder {
   font-style: normal;
-  font-weight: 500;
-  font-size: 22px;
-  line-height: 31px;
-  color: #878787;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+
+  color: #ffffff;
 }
 
 .contact-sec .row .btn-submit {
@@ -778,8 +805,9 @@ button:focus {
   letter-spacing: -0.016em;
   color: #451257;
   background: #ffffff;
-  border-radius: 15px;
+  border-radius: 30px;
   padding: 12px 64px 10px 64px;
+  width: 100%;
 }
 
 .modal-header {
@@ -793,22 +821,37 @@ button:focus {
 
 .sendmodel h1 {
   font-style: normal;
-  font-weight: 700;
-  font-size: 70px;
-  line-height: 88px;
+  font-weight: 600;
+  font-size: 52px;
+  line-height: 86px;
+
   text-align: center;
-  letter-spacing: -0.012em;
-  color: #000000;
+  letter-spacing: -2px;
+  color: #451257;
 }
 
 .sendmodel p {
+  font-style: normal;
   font-weight: 400;
-  font-size: 30px;
-  line-height: 38px;
+  font-size: 20px;
+  line-height: 28px;
   text-align: center;
-  color: #0a142f;
+  color: #3f3f46;
 }
-
+.sendmodel button {
+  border: 2px solid #451257 !important;
+  border-radius: 50px;
+  background-color: transparent;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: -0.2px;
+  color: #451257;
+  width: 284px;
+  height: 60px;
+}
 .contactModal .modal-dialog {
   max-width: 712px !important;
   padding: 21px;
@@ -841,24 +884,25 @@ footer .footerLogo {
 }
 
 footer .note {
-  mix-blend-mode: normal;
-  opacity: 0.8;
   font-style: normal;
-  font-weight: 200;
-  font-size: 18px;
-  line-height: 22px;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 34px;
+
   text-align: center;
+
+  color: #52525b;
 }
 
 footer .copyright {
   font-style: normal;
-  font-weight: 200;
-  font-size: 14px;
-  line-height: 18px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 34px;
+
   text-align: center;
-  color: #0a142f;
-  mix-blend-mode: normal;
-  opacity: 0.8;
+
+  color: #52525b;
 }
 
 /* Footer */
@@ -889,8 +933,7 @@ footer .copyright {
 
 @media screen and (min-width: 1440px) {
   .serviceSec .card {
-    min-height: 35vh;
-    margin-top: 6rem;
+    min-height: 35vh; 
   }
 
   .backToTop {
@@ -925,8 +968,7 @@ footer .copyright {
   }
 
   .serviceSec .card {
-    min-height: 30vh;
-    margin-top: 6rem;
+    min-height: 36vh; 
   }
 
   .card h2 {
@@ -1032,16 +1074,8 @@ footer .copyright {
   }
 
   .serviceSec .card {
-    min-height: 32vh;
-    margin-top: 6rem;
-  }
-
-  .resultSec .mySwiper .result-swiper-button-next {
-    right: 35px;
-  }
-
-  .resultSec .mySwiper .result-swiper-button-prev {
-    left: 35px;
+    min-height: 38vh;
+    margin-top:20px;
   }
 
   .resultSec .modal.show .modalRow {
@@ -1123,23 +1157,20 @@ footer .copyright {
     height: 100vh;
   }
 
-  .topHead {
-    text-align: center;
-  }
-
   .serviceSec .card.first {
     margin-top: 0;
   }
-
+  .serviceSec .cardsMain .col-xl-6 {
+    padding: 0 !important;
+  }
   .serviceSec .card {
     min-height: auto;
-    padding: 10px;
+    padding: 0 16px;
   }
 
   .serviceSec .card .iconWrapper {
     width: 120px;
     height: 120px;
-    margin-top: -60px;
   }
 
   .serviceSec .card h2 {
@@ -1148,7 +1179,6 @@ footer .copyright {
   }
 
   .serviceSec .card p {
-    padding: 0 10px;
     font-size: 14px;
     line-height: 20px;
   }
@@ -1257,7 +1287,7 @@ footer .copyright {
   }
 
   .faqs-sec .accordion .accordIcon {
-    right: -6px;
+    right: 6px;
     width: 32px;
     height: 32px;
   }
@@ -1275,7 +1305,7 @@ footer .copyright {
 
   .faqs-sec .accordion .accordIcon {
     bottom: auto;
-    top: 46px;
+    top: 24px;
   }
 
   .faqs-sec .accordion h3 {
@@ -1313,8 +1343,8 @@ footer .copyright {
   .contact-sec .row .form-control::placeholder,
   .contact-sec .row .form-control,
   .contact-sec .row .form-label {
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 16px;
+    line-height: 24px;
     margin-bottom: 0;
   }
 
